asg/tests/fail/array/type_tuple_value_nested_3x2_fail.leo
function main() {
    const b: [u8; (2, 3)] = [[0; 2]; 3]; // initializer (incorrectly reversed ordering)
}